--- a/index.css
+++ b/index.css
@@ -1,21 +1,150 @@
-html, body {
+/* .container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 500px;
+    border: 1px solid #000;
+} */
+
+html {
+    background-color: #d8b791;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+}
+
+@font-face {
+    font-family: 'RobotoSlab';
+    src: url('RobotoSlab-VariableFont_wght.ttf') format('truetype'); /* Replace 'path/to/font.ttf' with the actual path to your font file */
+}
+
+#titleBox {
+    /*box property related components*/
+    width: 400px;
+    height: 32.5;
+    background-color:rgb(240, 204, 149);
+    box-shadow: 2.5px 2.5px 5px rgb(226, 127, 94);;
+    /*text related components*/
+    color: rgb(0, 0, 0);
+    font-size: 12.5px; /* Adjust the text size as needed */
+    font-family: 'RobotoSlab', sans-serif; /* Use the custom font as the preferred font family */
+    text-shadow: 2px 2px 4px rgb(226, 127, 94); /* Add shadow with specific color */
+}
+
+.titleBoxes {
+    /* margin: 0 auto; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px 9px 10px;
+    border: 5px solid rgb(0, 0, 0); /* Example style for class */
+}
+
+.normalText {
+    font-size: 7.5 px;
+    color: rgb(0, 0, 0);
+    font-family: 'RobotoSlab', sans-serif; /* Use the custom font as the preferred font family */
+    /* text-shadow: 2px 2px 4px rgb(191, 191, 191); */
+    /* Add shadow with specific color */
+}
+
+/*.box {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: rgb(255, 235, 205);
+    color: rgb(248, 157, 127);
+    text-align: center;
+    line-height: 100px;
+    order: 1; 
+} */
+
+/* #box1 {
+    top: 50px;
+    left: 50px;
+}
+
+.text {
+    position: absolute;
+    color: rgb(0, 0, 0);
+    order: 2; 
+}
+
+#box1 {
+    top: 50px;
+    left: 50px;
+    order: 2; 
+}
+
+#box2 {
+    top: 200px;
+    left: 200px;
+}
+
+#text1 {
+    top: 20px;
+    left: 20px;
+}
+
+#text2 {
+    top: 250px;
+    left: 250px;
+} */
+
+/* html, body {
     margin: 0;
     padding: 0;
 }
 
-html {
-    background-color: beige;
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.top-bar {
-    background-color: blanchedalmond;
-    position: sticky;
+.item1 {
+    order: 2;
+}
+
+.item2 {
+    order: 1;
+}
+
+.layer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+*/ 
+/* 
+.bottom-layer {
+    background-color:beige; /* beige background */
+    /*z-index: 1;*/ /*Set a higher z-index */
+
+ 
+
+/* .top-layer {
+    background-color: rgb(255, 235, 205); /* beige background */
+    /* position: sticky;
     top: 0%;
-    padding: 1% 0;
-}
+    padding: 1% 0; */
+    /*z-index: 2;*/ /* Set a lower z-index */
+    
+/*} */
 
-h1 {
-    color: rgb(0, 0, 0);
+/* .top-bar-encased {
+    background-color:rgb(248, 157, 127);
+    position: sticky;
+    top: 10%;
+    padding: 1% 0;
+} */
+
+/*h1 {
+    /*color: rgb(0, 0, 0);*/
     /*poopy*/
     /*poopyp2*/
-}
+/* } */
