--- a/index.css
+++ b/index.css
@@ -52,6 +52,39 @@ img {
     /* Add shadow with specific color */
 }
 
+.navbar {
+    background-color: #333;
+    margin-bottom: 1%;
+  }
+  
+  .navbar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .navbar ul li {
+    display: inline;
+  }
+  
+  .navbar ul li a {
+    display: inline-block;
+    padding: 20px;
+    text-decoration: none;
+    color: white;
+  }
+  
+  .navbar ul li a:hover {
+    background-color: #555;
+  }
+
+  /* text-alignment */
+
+  .half {
+    text-align: left;
+    width: 45%;
+  }
+
 /*.box {
     position: absolute;
     width: 100px;
