--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 } */
 
 html {
-    background-color: #d8b791;
+    background-color: rgb(255, 254, 238);
 }
 
 img {
@@ -41,7 +41,16 @@ img {
     color: rgb(0, 0, 0);
     font-size: 12.5px; /* Adjust the text size as needed */
     font-family: 'RobotoSlab', sans-serif; /* Use the custom font as the preferred font family */
-    text-shadow: 2px 2px 4px rgb(226, 127, 94); /* Add shadow with specific color */
+    text-shadow: 4px 4px 8px rgb(226, 127, 94); /* Add shadow with specific color */
+}
+
+.titleText {
+    font-size: 7.5 px;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'RobotoSlab', sans-serif;
 }
 
 .normalText {
