--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ img {
     font-size: 12.5px; /* Adjust the text size as needed */
     font-family: 'RobotoSlab', sans-serif; /* Use the custom font as the preferred font family */
     text-shadow: 4px 4px 8px rgb(226, 127, 94); /* Add shadow with specific color */
+    z-index: 2;
 }
 
 .titleText {
