--- a/index.css
+++ b/index.css
@@ -72,15 +72,7 @@ img {
     margin-bottom: 1%;
   }
   
-  .navbar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .navbar ul li {
-    display: inline;
-  }
+
   
   .navbar ul li a {
     display: inline-block;
@@ -90,7 +82,7 @@ img {
   }
   
   .navbar ul li a:hover {
-    background-color: #555;
+    background-color: rgb(128,128,128);
   }
 
   /* text-alignment */
